Fix spacing of images and text in a section

--- a/_assets/css/sections/_header.scss
+++ b/_assets/css/sections/_header.scss
@@ -2,6 +2,7 @@
   box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 2px 6px 2px rgba(60,64,67,.15);
 
   &__content {
+    width: 100%;
     margin: 0 auto;
   }
 
